--- a/index.html
+++ b/index.html
@@ -5,30 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      body,
-      #colour-display {
-        display: grid;
-        place-items: center;
-      }
-
-      body {
-        min-height: 90vh;
-        height: 90vh;
-        max-height: 90vh;
-        background-color: black;
-      }
-
-      #colour-display {
-        width: 400px;
-        height: 400px;
-        background-color: white;
-      }
-
-      #colour {
-        width: 200px;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="colour-display">
