feat: added colour picker input to be able to play around with colour

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="colour-display">
-      <input type="text" name="colour" id="colour" />
+      <div>
+        <input type="text" name="colour" id="colour" />
+        <input type="color" name="colour-picker" id="colour-picker" />
+      </div>
     </div>
     <script src="dist/display-colour.js"></script>
   </body>
